<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:title="Detail" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/game_image"
                    android:scaleType="fitCenter" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/txt_game_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_game_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:textSize="16sp" />

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginEnd="4dp"
                            android:contentDescription="@string/star_icon"
                            android:src="@drawable/ic_star" />

                        <TextView
                            android:id="@+id/txt_game_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_game_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <com.google.android.material.card.MaterialCardView
                            style="?attr/materialCardViewOutlinedStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="8dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/release_date"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/txt_game_release"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>

                        <Space
                            android:layout_width="8dp"
                            android:layout_height="wrap_content" />

                        <com.google.android.material.card.MaterialCardView
                            style="?attr/materialCardViewOutlinedStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="8dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/last_update"
                                    android:textSize="12sp" />

                                <TextView
                                    android:id="@+id/txt_game_update"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />
                            </LinearLayout>
                        </com.google.android.material.card.MaterialCardView>
                    </LinearLayout>

                    <com.google.android.material.card.MaterialCardView
                        style="?attr/materialCardViewOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/developers"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/txt_game_developer"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        style="?attr/materialCardViewOutlinedStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="8dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/platforms"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/txt_game_platform"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/official_website"
                        tools:ignore="VisualLintButtonSize" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_reddit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:backgroundTint="@color/reddit"
                        android:text="@string/reddit"
                        tools:ignore="VisualLintButtonSize" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_metacritics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="24dp"
                        android:backgroundTint="@color/metacritics"
                        android:text="@string/metacritics"
                        tools:ignore="VisualLintButtonSize" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>